--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@remix-run/react": "^1.9.0",
     "cross-env": "^7.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@remix-run/serve": "^1.7.6",
+    "isbot": "^3.6.5"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.9.0",
